[package]
name = "luminance-glfw-custom"
version = "0.5.4"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "(twetzel59's slight modification of) GLFW support for luminance"

[dependencies]
gl = "0.10"
glfw = "0.23"
luminance = { version = "0.30", git = "https://github.com/phaazon/luminance-rs" }
luminance-windowing = { version = "0.2", git = "https://github.com/phaazon/luminance-rs" }
